@@ -1,5 +1,8 @@
 package org.testng.internal.annotations;
 
-public class ObjectFactoryAnnotation extends BaseAnnotation
-  implements IObjectFactory
+/**
+ * The internal representation of @ObjectFactory
+ * @author Hani
+ */
+public class ObjectFactoryAnnotation extends BaseAnnotation implements IObjectFactory
 {}
