@@ -1,6 +1,7 @@
 ===========================================================================
 5.6
 
+Added: plugging in factory objects to handle the actual instantiation of tests
 Added: dataProvider to @Factory
 Added: ISuite now gives access to the current XmlSuite
 Fixed: TESTNG-139 dependsOnMethods gets confused when dependency is "protected"
